--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "confy-core start --env=development",
     "build": "confy-core build --env=production",
     "test": "confy-core test --env=test",
-    "config": "confy-core show-config --env=development"
+    "config": "confy-core show-config --env=development",
+    "dev": "vite"
   },
   "keywords": [],
   "author": "",
@@ -21,12 +22,15 @@
     "@emotion/babel-preset-css-prop": "^10.0.23",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.1.3",
     "@types/animejs": "^3.1.0",
-    "@types/react": "^16.9.23",
-    "@types/react-dom": "^16.9.5",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
     "@types/three": "^0.103.2",
+    "@vitejs/plugin-react": "^4.3.1",
     "cross-env": "^7.0.2",
     "react-refresh": "^0.7.2",
-    "terser-webpack-plugin": "^2.3.6"
+    "terser-webpack-plugin": "^2.3.6",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.2"
   },
   "dependencies": {
     "@emotion/core": "^10.0.22",
@@ -35,10 +39,11 @@
     "easystarjs": "^0.4.3",
     "fast-simplex-noise": "3.2.0",
     "immer": "^6.0.3",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-three-fiber": "^4.2.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-three-fiber": "^4.2.21",
     "three": "^0.112.1",
     "zustand": "^2.2.3"
-  }
+  },
+  "packageManager": "pnpm@9.7.1+sha512.faf344af2d6ca65c4c5c8c2224ea77a81a5e8859cbc4e06b1511ddce2f0151512431dd19e6aff31f2c6a8f5f2aced9bd2273e1fed7dd4de1868984059d2c4247"
 }
