--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -12,6 +12,7 @@
 		"moduleDetection": "force",
 		"noEmit": true,
 		"jsx": "react-jsx",
+		"noEmitOnError": false,
 
 		"strict": true,
 		"noUnusedLocals": true,
