--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -10,6 +10,7 @@
 		"isolatedModules": true,
 		"moduleDetection": "force",
 		"noEmit": true,
+		"noEmitOnError": false,
 
 		"strict": true,
 		"noUnusedLocals": true,
