--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"@types/animejs": "^3.1.0",
 		"@types/react": "^18.3.5",
 		"@types/react-dom": "^18.3.0",
-		"@types/three": "^0.103.2",
+		"@types/three": "^0.168.0",
 		"@vitejs/plugin-react": "^4.3.1",
 		"cross-env": "^7.0.2",
 		"react-refresh": "^0.7.2",
@@ -35,15 +35,15 @@
 	},
 	"dependencies": {
 		"@emotion/core": "^10.0.22",
+		"@react-three/drei": "^9.111.5",
+		"@react-three/fiber": "^8.17.6",
 		"animejs": "^3.1.0",
-		"drei": "^0.0.54",
 		"easystarjs": "^0.4.3",
 		"fast-simplex-noise": "3.2.0",
 		"immer": "^6.0.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-three-fiber": "^4.2.21",
-		"three": "^0.112.1",
+		"three": "^0.168.0",
 		"zustand": "^2.2.3"
 	},
 	"packageManager": "pnpm@9.7.1+sha512.faf344af2d6ca65c4c5c8c2224ea77a81a5e8859cbc4e06b1511ddce2f0151512431dd19e6aff31f2c6a8f5f2aced9bd2273e1fed7dd4de1868984059d2c4247"
